--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,8 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-
-}
+/* Estilo principal */
 
 #root {
+ height: 100vh;
+ font-family: "Poppins", sans-serif;
 
-  height: 100vh;
 }
 
-body {
-  overflow: hidden;
-}
