--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 /* Estilo principal */
 
 #root {
- height: 100vh;
- font-family: "Poppins", sans-serif;
+    height: 100vh;
+    font-family: "Poppins", sans-serif;
 
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box
+}
