--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -5,6 +5,9 @@
     display: flex;
     flex-direction: row;
 }
+h1{
+    margin: 0;
+}
 
 .header {
     display: flex;
@@ -42,13 +45,14 @@
         flex-direction: row;
         gap: 15px;
         padding: 5px 8px;
+        align-items: center;
 
         .entrar {
             background-color: #24303E;
             color: white;
             display: flex;
             align-items: center;
-            padding: 10px;
+            padding:  10px;
             border-radius: 8px;
             transition: all 0.5s;
 
@@ -62,7 +66,7 @@
         .cadastrar {
             color: #212C3A;
             font-size: 12px;
-            padding: 10px;
+            padding:10px;
             background-color: white;
             border-radius: 8px;
             display: flex;
