--- a/src/components/Hero/syle.module.css
+++ b/src/components/Hero/syle.module.css
@@ -20,7 +20,7 @@
     .conteudo {
         position: absolute;
         z-index: 2;
-        width: 97%;
+        width: 100%;
         height: 100%;
         top: 0;
         right: 0;
@@ -131,7 +131,7 @@
             transition: 0.5s;
             cursor: pointer;
             display: flex;
-
+            font-family: "Poppins", sans-serif;
             &:hover {
                 transform: scale(1.1);
             }
