--- a/src/components/CentralDeAjuda/style.module.css
+++ b/src/components/CentralDeAjuda/style.module.css
@@ -4,10 +4,11 @@
     align-items: center;
     flex-direction: column;
     color: white;
+    padding: 25px;
 
     h1 {
         text-align: center;
-        margin-top: 80px;
+      
         margin-bottom: 40px;
         font-size: 40px;
     }
@@ -39,14 +40,13 @@
 
     h2 {
         text-align: center;
-        margin-top: 60px;
-        margin-bottom: 40px;
+        padding: 35px 0px;
         font-size: 30px;
         font-style: italic;
     }
 
     .maisGrid {
-        width: 90%;
+        gap: 25px;
         margin: 0 auto;
         /* display: grid;
         grid-template-columns: 1fr 1fr 1fr; */
