--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -48,7 +48,7 @@ h1{
         align-items: center;
 
         .entrar {
-            background-color: #24303E;
+            background-color: #2d3e51;
             color: white;
             display: flex;
             align-items: center;
@@ -57,7 +57,7 @@ h1{
             transition: all 0.5s;
 
             h1 {
-                font-size: 16px;
+                font-size: 18px;
                 font-weight: 400;
             }
             
