--- a/src/components/LobbyCassino/style.module.css
+++ b/src/components/LobbyCassino/style.module.css
@@ -98,7 +98,7 @@
     flex-direction: column;
     padding: 20px;
     border-radius: 32px;
-
+text-decoration: none;
     .time {
 
         padding: 10px 20px 0px 20px;
@@ -162,6 +162,7 @@
         width: 100%;
         height: 3px;
         background-color: #dddddd;
+        border: none;
     }
 
     .odds {
