--- a/src/components/Perfil/style.module.css
+++ b/src/components/Perfil/style.module.css
@@ -79,7 +79,7 @@
         color: #ffffff;
         flex-direction: column;
         padding: 30px;
-        width: 600px;
+        width: 100%;
         border-radius: 21px;
         justify-content: start;
 
@@ -103,15 +103,24 @@
                     flex-direction: row;
                     align-items: center;
                     background-color: #1E3B61;
-                    max-height: 65px;
+                    max-height: 85px;
                     height: 100%;
                     padding: 4px;
                     border-radius: 25px;
 
-                    .imagemTime {
+                    .conteudoTime {
+                        display: flex;
+                        align-items: center;
                         img {
                             width: 50px;
                             object-fit: cover;
+                        }
+                        .placar{
+                            color: white;
+                            font-size: 20px;
+                            font-weight: 600;
+                            width: 35px;
+                            text-align: center;
                         }
                     }
 
@@ -119,6 +128,7 @@
                         font-size: 45px;
                         font-weight: 600;
                     }
+                    
                 }
             }
 
