--- a/src/components/Slot/style.module.css
+++ b/src/components/Slot/style.module.css
@@ -72,6 +72,7 @@
            gap: 25px;
            
            .caixaJogoCassino{
+            text-decoration: none;
             transition: all 0.3s;
             img{
                 width: 100%;
