--- a/src/components/RankingSlots/style.module.css
+++ b/src/components/RankingSlots/style.module.css
@@ -23,16 +23,16 @@
     padding: 50px 0px 150px 0px;
 
     .Slot {
-text-decoration: none;
+        text-decoration: none;
         transition: 0.5s ease;
-        cursor: pointer;  
+        cursor: pointer;
         position: relative;
 
         &:hover {
             transform: scale(1.05) translateY(-10px);
         }
 
-      
+
 
         .rateSlot {
             color: #fff;
@@ -59,5 +59,28 @@ text-decoration: none;
             left: 50%;
             transform: translateX(-50%);
         }
+    }
+}
+
+@media (max-width:1390px) {
+    .conteudoRankingSlots {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width:850px) {
+    .conteudoRankingSlots {
+        grid-template-columns: 1fr;
+    }
+
+    .titleSection {
+        font-size: 30px;
+    }
+}
+
+@media (max-width:580px) {
+    .titleSection {
+
+        text-align: center;
     }
 }
