--- a/src/components/CentralDeAjuda/style.module.css
+++ b/src/components/CentralDeAjuda/style.module.css
@@ -5,12 +5,15 @@
     flex-direction: column;
     color: white;
     padding: 25px;
-
+    
     h1 {
         text-align: center;
       
         margin-bottom: 40px;
         font-size: 40px;
+        @media (max-width: 780px) {
+            font-size: 32px;
+        }
     }
 
     .barraPesquisa {
@@ -22,7 +25,11 @@
         padding: 10px 25px;
         margin: 0 auto;
         border-radius: 15px;
-
+        @media (max-width: 850px) {
+            justify-content: center;
+            width: auto;
+            cursor: pointer;
+        }
         input {
             flex: 1;
             font-size: 22px;
@@ -30,6 +37,9 @@
             background: transparent;
             border: 0;
             color: white;
+            @media (max-width: 850px) {
+                display: none;
+            }
         }
 
         &:focus-within {
@@ -43,26 +53,31 @@
         padding: 35px 0px;
         font-size: 30px;
         font-style: italic;
+        @media (max-width: 780px) {
+            font-size: 28px;
+        }
     }
 
     .maisGrid {
         gap: 25px;
-        margin: 0 auto;
-        /* display: grid;
-        grid-template-columns: 1fr 1fr 1fr; */
         display: flex;
         align-items: start;
         justify-content: space-around;
-
+        @media (max-width: 920px) {
+            flex-direction: column;
+        }
         .maisCardConta {
-
-            /* width: 90%; */
-            width: 450px;
+            width: 32.75%;
             margin: 0 auto;
             background-color: white;
             color: #757575;
             border-radius: 10px;
-
+            @media (max-width: 920px) {
+                width: 75%;
+            }
+            @media (max-width: 600px) {
+                width: 100%;
+            }
             .maisImage {
                 display: flex;
                 justify-content: center;
@@ -85,17 +100,32 @@
                 justify-content: center;
                 align-items: center;
                 height: 160px;
-
+                @media (max-width: 1120px) {
+                    height: auto;
+                }
                 h3 {
                     color: #197EFF;
                     font-size: 20px;
                     font-weight: 500;
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
 
                 p {
                     text-align: center;
                     font-size: 20px;
-
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
             }
 
@@ -113,7 +143,13 @@
                     font-weight: 700;
                     text-decoration: underline;
                     cursor: pointer;
-
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
             }
         }
@@ -121,12 +157,17 @@
         .maisCardCarteira {
 
             /* width: 90%; */
-            width: 450px;
+            width: 32.75%;
             margin: 0 auto;
             background-color: white;
             color: #757575;
             border-radius: 10px;
-
+            @media (max-width: 920px) {
+                width: 75%;
+            }
+            @media (max-width: 600px) {
+                width: 100%;
+            }
             .maisImage {
                 display: flex;
                 justify-content: center;
@@ -149,17 +190,32 @@
                 justify-content: center;
                 align-items: center;
                 height: 160px;
-
+                @media (max-width: 1120px) {
+                    height: auto;
+                }
                 h3 {
                     color: #197EFF;
                     font-size: 20px;
                     font-weight: 500;
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
 
                 p {
                     text-align: center;
                     font-size: 20px;
-
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
             }
 
@@ -177,7 +233,13 @@
                     font-weight: 700;
                     text-decoration: underline;
                     cursor: pointer;
-
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
             }
         }
@@ -185,12 +247,17 @@
         .maisCardChave {
 
             /* width: 90%; */
-            width: 450px;
+            width: 32.75%;
             margin: 0 auto;
             background-color: white;
             color: #757575;
             border-radius: 10px;
-
+            @media (max-width: 920px) {
+                width: 75%;
+            }
+            @media (max-width: 600px) {
+                width: 100%;
+            }
             .maisImage {
                 display: flex;
                 justify-content: center;
@@ -213,17 +280,32 @@
                 justify-content: center;
                 align-items: center;
                 height: 160px;
-
+                @media (max-width: 1120px) {
+                    height: auto;
+                }
                 h3 {
                     color: #197EFF;
                     font-size: 20px;
                     font-weight: 500;
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
 
                 p {
                     text-align: center;
                     font-size: 20px;
-
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
             }
 
@@ -241,7 +323,13 @@
                     font-weight: 700;
                     text-decoration: underline;
                     cursor: pointer;
-
+                    @media (max-width: 780px) {
+                        font-size: 18px;
+                    }
+                    @media (max-width: 600px) {
+                        font-size: 14px;
+                        text-align: center;
+                    }
                 }
             }
         }
@@ -258,12 +346,19 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-
+           
         .LerMaisDesc {
             display: flex;
             flex-direction: row;
             gap: 8px;
             flex-wrap: wrap;
+            @media (max-width: 780px) {
+                font-size: 18px;
+            }
+            @media (max-width: 600px) {
+                font-size: 14px;
+                text-align: center;
+            }
         }
     }
 }
