--- a/src/components/DetalheCassino/style.module.css
+++ b/src/components/DetalheCassino/style.module.css
@@ -39,4 +39,11 @@
             color: white;
         }
     }
+    @media (max-width:1300px) {
+    
+    .capaJogo{
+        width: 300px;
+      
+    }
+}
 }
