--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: row;
 }
-h1{
+
+h1 {
     margin: 0;
 }
 
@@ -21,6 +22,7 @@ h1{
         display: flex;
         flex-direction: row;
         align-items: center;
+        cursor: pointer;
     }
 
     .logoBet {
@@ -37,6 +39,10 @@ h1{
         .logoFoguete {
             width: 50px;
             object-fit: cover;
+
+            @media (max-width:540px) {
+                display: none;
+            }
         }
     }
 
@@ -52,21 +58,23 @@ h1{
             color: white;
             display: flex;
             align-items: center;
-            padding:  10px;
+            padding: 10px;
             border-radius: 8px;
             transition: all 0.5s;
+            cursor: pointer;
 
             h1 {
                 font-size: 18px;
                 font-weight: 400;
             }
-            
+
         }
 
         .cadastrar {
+            cursor: pointer;
             color: #212C3A;
             font-size: 12px;
-            padding:10px;
+            padding: 10px;
             background-color: white;
             border-radius: 8px;
             display: flex;
@@ -77,20 +85,21 @@ h1{
                 font-size: 18px;
                 font-weight: 500;
             }
-            
+
         }
-       
-        
+
+
     }
-    .entrar:hover{
+
+    .entrar:hover {
         background-color: #254162;
         transform: scale(1.05);
         transition: all 0.5s;
-        
+
     }
-    .cadastrar:hover{
+
+    .cadastrar:hover {
         transform: scale(1.05);
         transition: 0.5s;
     }
 }
-
