--- a/src/components/Integrante/style.module.css
+++ b/src/components/Integrante/style.module.css
@@ -12,10 +12,17 @@
         display: flex;
         flex-direction: row;
         gap: 30px;
-
+        @media (max-width: 675px) {
+            flex-direction: column;
+            align-items: center;
+            padding: 30px 10px;
+        }
         .image {
             object-fit: cover;
-            width: 500px;
+            width: 37.5%;
+            @media (max-width: 675px) {
+                width: 65%;
+            }
         }
 
         .conteudo {
@@ -35,13 +42,25 @@
                 align-items: center;
                 margin-bottom: 35px;
                 width: 100%;
-
+                   
                 .nome {
                     
                     font-size: 42px;
                     font-weight: 600;
                     font-style: italic;
                     color: white;
+                    @media (max-width: 1390px) {
+                        font-size: 36px;
+                    }
+                    @media (max-width: 1131px) {
+                        font-size: 30px;
+                    }
+                    @media (max-width: 980px) {
+                        font-size: 24px;
+                    }
+                    @media (max-width: 817px) {
+                        font-size: 16px;
+                    }
                 }
 
                 .profissao {
@@ -49,6 +68,18 @@
                     font-weight: 600;
                     font-style: italic;
                     color: #197EFF;
+                    @media (max-width: 1390px) {
+                        font-size: 28px;
+                    }
+                    @media (max-width: 1131px) {
+                        font-size: 22px;
+                    }
+                    @media (max-width: 980px) {
+                        font-size: 15px;
+                    }
+                    @media (max-width: 817px) {
+                        font-size: 12px;
+                    }
                 }
 
             }
@@ -59,6 +90,15 @@
                 color: white;
                 font-size: 28px;
                 font-weight: 400;
+                @media (max-width: 1131px) {
+                    font-size: 22px;
+                }
+                @media (max-width: 980px) {
+                    font-size: 15px;
+                }
+                @media (max-width: 817px) {
+                    font-size: 12px;
+                }
             }
         }
     }
@@ -69,10 +109,17 @@
         display: flex;
         flex-direction: row;
         gap: 30px;
-
+        @media (max-width: 675px) {
+            flex-direction: column;
+            align-items: center;
+            padding: 30px 10px;
+        }
         .image {
             object-fit: cover;
-            width: 500px;
+            width: 37.5%;
+            @media (max-width: 675px) {
+                width: 65%;
+            }
         }
 
         .conteudo {
@@ -98,6 +145,18 @@
                     font-weight: 600;
                     font-style: italic;
                     color: white;
+                    @media (max-width: 1390px) {
+                        font-size: 36px;
+                    }
+                    @media (max-width: 1131px) {
+                        font-size: 30px;
+                    }
+                    @media (max-width: 980px) {
+                        font-size: 24px;
+                    }
+                    @media (max-width: 817px) {
+                        font-size: 16px;
+                    }
                 }
 
                 .profissao {
@@ -105,6 +164,18 @@
                     font-weight: 600;
                     font-style: italic;
                     color: #197EFF;
+                    @media (max-width: 1390px) {
+                        font-size: 28px;
+                    }
+                    @media (max-width: 1131px) {
+                        font-size: 22px;
+                    }
+                    @media (max-width: 980px) {
+                        font-size: 15px;
+                    }
+                    @media (max-width: 817px) {
+                        font-size: 12px;
+                    }
                 }
 
 
@@ -116,6 +187,15 @@
                 color: white;
                 font-size: 28px;
                 font-weight: 400;
+                @media (max-width: 1131px) {
+                    font-size: 22px;
+                }
+                @media (max-width: 980px) {
+                    font-size: 15px;
+                }
+                @media (max-width: 817px) {
+                    font-size: 12px;
+                }
             }
         }
     }
