--- a/src/components/LobbyCassino/style.module.css
+++ b/src/components/LobbyCassino/style.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 25px;
     gap: 20px;
-   
+
 
     .gridFiltro {
         grid-template-columns: 1fr repeat(5, 1fr);
@@ -18,9 +18,48 @@
             border-radius: 50px;
             gap: 20px;
 
+            @media (max-width: 660px) {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
             h1 {
                 font-size: 29px;
                 color: white;
+
+                @media (max-width: 1500px) {
+                    font-size: 24px;
+                }
+
+                @media (max-width: 1420px) {
+                    font-size: 18px;
+                }
+
+                @media (max-width: 1240px) {
+                    font-size: 18px;
+                }
+
+                @media (max-width: 1240px) {
+                    font-size: 14px;
+                }
+
+                @media (max-width: 1130px) {
+                    font-size: 12px;
+                }
+
+                @media (max-width: 1080px) {
+                    font-size: 10px;
+                }
+
+                @media (max-width: 1020px) {
+                    font-size: 8px;
+                }
+
+                @media (max-width: 1000px) {
+                    display: none;
+                }
+               
+
             }
 
             .elementoPage {
@@ -53,15 +92,32 @@
     }
 }
 
+.containerApostas {
+    @media (max-width:1350px) {
+        display: flex;
+        flex-direction: column;
+
+    }
+}
+
 .tituloBar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
     padding-bottom: 50px;
 
     h1 {
         color: white;
         font-size: 40px;
+         @media (max-width:880px) {
+                   font-size: 30px;
+                }
+                 @media (max-width: 600px) {
+                     font-size: 25px;
+                     
+                }
+                 @media (max-width: 600px) {
+                     font-size: 22px;
+                    
+                }
     }
 }
 
@@ -78,6 +134,9 @@
 
         .esporteTitulo {
             color: white;
+               @media (max-width:880px) {
+                   font-size: 25px;
+                }
         }
     }
 
@@ -88,6 +147,12 @@
     grid-template-columns: 1fr 1fr;
     gap: 25px;
     padding: 20px;
+
+    @media (max-width:1350px) {
+        grid-template-columns: 1fr;
+
+    }
+
 }
 
 .caixaFut {
@@ -98,7 +163,9 @@
     flex-direction: column;
     padding: 20px;
     border-radius: 32px;
-text-decoration: none;
+    text-decoration: none;
+      
+
     .time {
 
         padding: 10px 20px 0px 20px;
@@ -108,6 +175,9 @@ text-decoration: none;
         align-items: center;
         gap: 35px;
         width: 100%;
+         @media (max-width:880px) {
+                   flex-direction: column;
+                }
 
         .timeAposta {
             display: flex;
@@ -120,9 +190,19 @@ text-decoration: none;
             }
 
             img {
-                width: 60px;
-                height: 60px;
+                width: 80px;
+                height: 80px;
 
+                @media (max-width:880px) {
+                    width: 65px;
+                    height: 65px;
+
+                }
+
+            }
+
+            .nomeTime {
+                text-align: center;
             }
 
         }
@@ -144,6 +224,11 @@ text-decoration: none;
         .genero {
             font-size: 35px;
             font-weight: 400;
+
+            @media (max-width:880px) {
+                font-size: 26px;
+
+            }
         }
 
         .xis {
@@ -182,6 +267,14 @@ text-decoration: none;
             transition: all 0.5s;
             cursor: pointer;
 
+            @media (max-width:880px) {
+                font-size: 20px;
+                max-width: 120px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
             &:hover {
                 transform: scale(1.02);
                 background-color: #00ff6e;
@@ -190,7 +283,14 @@ text-decoration: none;
             span {
                 color: white;
                 font-size: 25px;
-                font-weight: 700
+                font-weight: 700;
+
+                @media (max-width:880px) {
+                    font-size: 20px;
+
+
+                }
+
             }
         }
 
@@ -205,6 +305,14 @@ text-decoration: none;
             transition: all 0.5s;
             cursor: pointer;
 
+            @media (max-width:880px) {
+                font-size: 20px;
+                max-width: 120px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
             &:hover {
                 transform: scale(1.02);
                 background-color: #1e66c5;
@@ -213,7 +321,14 @@ text-decoration: none;
             span {
                 color: white;
                 font-size: 25px;
-                font-weight: 700
+                font-weight: 700;
+
+                @media (max-width:880px) {
+                    font-size: 20px;
+
+
+                }
+
             }
         }
 
@@ -228,6 +343,14 @@ text-decoration: none;
             transition: all 0.5s;
             cursor: pointer;
 
+            @media (max-width:880px) {
+                font-size: 20px;
+                max-width: 120px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
             &:hover {
                 transform: scale(1.02);
                 background-color: #ff0004;
@@ -236,8 +359,25 @@ text-decoration: none;
             span {
                 color: white;
                 font-size: 25px;
-                font-weight: 700
+                font-weight: 700;
+
+                @media (max-width:880px) {
+                    font-size: 20px;
+
+
+                }
+
             }
+        }
+    }
+
+    @media (max-width: 1500px) {
+        .elementoPage h1 {
+            font-size: 25px;
+        }
+
+        .elemento h1 {
+            font-size: 10px;
         }
     }
 }
