--- a/src/components/SobreNos/style.module.css
+++ b/src/components/SobreNos/style.module.css
@@ -8,6 +8,7 @@
     .conteudo {
         padding: 30px;
         display: flex;
+        width: 100%;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -25,6 +26,12 @@
                 font-size: 40px;
                 font-style: italic;
                 padding: 15px;
+                @media (max-width:570px) {
+                    font-size: 35px;
+                }
+                @media (max-width:530px) {
+                    font-size: 30px;
+                }
             }
 
             .sobreDesc {
@@ -34,6 +41,9 @@
                 font-weight: 200;
                 font-size: 25px;
                 text-align: center;
+                @media (max-width:570px) {
+                    font-size: 20px;
+                }
             }
         }
 
@@ -43,10 +53,16 @@
             gap: 35px;
             align-items: center;
             margin-top: 30px;
+            flex-wrap: wrap;
+            justify-content: center;
+        
 
             img {
                 width: 200px;
                 height: 100%;
+                @media (max-width:570px) {
+                    width: 120px;
+                }
             }
         }
     }
@@ -64,6 +80,79 @@
             font-size: 45px;
             font-style: italic;
             font-weight: 600;
+            @media (max-width:570px) {
+                    font-size: 30px;
+                }
         }
     }
+}
+
+@media (max-width:1180px) {
+    .integrantes {
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+  
+    .foto {
+      width: 100px;
+    }
+  }
+    
+   
+
+@media (max-width:1114px) {
+    .conteudo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+   
+}
+
+
+@media (max-width:770px) {
+    .sobreDesc {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column000;
+    }
+    .dados{
+        width:100%;
+        flex-direction: column;
+    }
+
+
+
+    .titleSection {
+        font-size: 30px;
+    }
+  
+}
+
+@media (max-width:580px) {
+    .titleSection {
+
+        text-align: center;
+    }
+    
+   
+    
+}
+
+@media (max-width:550px) {
+    .titleSection {
+
+        text-align: center;
+    }
+    .botaoperfil{
+        width: 50%;
+        align-self: center;
+      
+       
+    }
+    
+    
 }
